API_Reference/pymilvus/v2.4.x/MilvusClient/Collections/has_collection.md
# has_collection()

This operation checks whether a specific collection exists.

## Request Syntax

```python
has_collection(
    collection_name: str,
    timeout: Optional[float] = None
) -> Bool
```

__PARAMETERS:__

- __collection_name__ (_str_) -

    __[REQUIRED]__

    The name of a collection.

- __timeout__ (_float_ | _None_) -

    The timeout duration for this operation. 

    Setting this to __None__ indicates that this operation timeouts when any response returns or error occurs.

__RETURN TYPE:__

_bool_

__RETURNS:__

A boolean value indicating whether the specified collection exists.

__EXCEPTIONS:__

- __MilvusException__

    This exception will be raised when any error occurs during this operation.

## Examples

```python
from pymilvus import MilvusClient

# 1. Set up a milvus client
client = MilvusClient(
    uri="http://localhost:19530",
    token="root:Milvus"
)

# 2. Create a collection
client.create_collection(collection_name="test_collection", dimension=5)

# 3. Check whether a collection named `test_collection` exists
client.has_collection(collection_name="test_collection") 

# True

# 4. Check whether a collection named `test_collection_2` exists
client.has_collection(collection_name="test_collection_2") 

# False
```

## Related methods

- [create_collection()](./Collections/create_collection.md)

- [create_schema()](./Collections/create_schema.md)

- [describe_collection()](./Collections/describe_collection.md)

- [drop_collection()](./Collections/drop_collection.md)

- [get_collection_stats()](./Collections/get_collection_stats.md)

- [list_collections()](./Collections/list_collections.md)

- [rename_collection()](./Collections/rename_collection.md)

- [IndexType](./Collections/IndexType.md)

- [DataType](./Collections/DataType.md)

